# strongswan

./: configure.ac
init/: Makefile.am
init/systemd/: Makefile.am  strongswan.service.in
init/sysvinit/: Makefile.am  strongswan  strongswan.in
src/libstrongswan/plugins/openssl/: openssl_plugin.c
src/pki/: command.c
